--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "colors": "^1.4.0",
+    "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "nodemon": "^2.0.7"
   }
